# ncaster

./: .env.example  .gitignore  README.md  ncaster.py  pyproject.toml
src/ncaster/: __init__.py  __main__.py  cli.py  config.py  console.py  convert.py  editing.py  interactive.py  library.py  probe.py  settings.py  transcribe.py
tests/: test_convert.py  test_editing.py  test_library.py  test_probe.py  test_reuse.py  test_settings.py  test_transcribe.py
