[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncaster"
version = "1.0.0"
description = "High-quality CLI video/audio format converter powered by FFmpeg"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
ncaster = "ncaster:cli"

[tool.hatch.build.targets.wheel]
modules = ["ncaster"]
